# serious-doom

./: .gitignore  CMakeLists.txt  dev.sh  enemy.cpp  enemy.h  gun.cpp  gun.h  main.cpp  main1.cpp  map.cpp  map.h  player.cpp  player.h  projectile.cpp  projectile.h  renderer.cpp  renderer.h  sprite.cpp  sprite.h
.cache/clangd/index/: gun.cpp.0BAEF0ECF23BB824.idx  gun.h.600B5867187B6D23.idx  main.cpp.E335FE643D75D6DA.idx  map.cpp.462CF394DEF33860.idx  map.h.E9EBCFB70C423592.idx  player.cpp.6D0CB17C91487DFF.idx  player.h.A13FE6357FD92110.idx  renderer.cpp.97022E4F54A16399.idx  renderer.h.AF4CDA11B16EBD3F.idx  sprite.cpp.67AEE8DE0E7123D5.idx  sprite.h.E8BEA5BAF8AC0C1F.idx  stb_image.h.89B8AD50E82D3D56.idx
